# pontia-llm

./: .gitignore  CLAUDE.md  INFORME.md  Makefile  README.md  app.py  notebook_asistente_tenerife.ipynb  pytest.ini  requirements.txt  ui_theme.py
resources/Large Lenguage Models/sesion_01/: Makefile  README.md  Transformer.ipynb  pyproject.toml  requirements-windows.txt  requirements.txt
resources/Large Lenguage Models/sesion_01/transformer_explorer/: README.md  index.html  package-lock.json  package.json
resources/Large Lenguage Models/sesion_01/transformer_explorer/src/: App.tsx  styles.css
resources/Large Lenguage Models/sesion_02/: Makefile  README.md  actividad_sesion_02.ipynb  env.template  pyproject.toml  requirements.txt  sesion_02.ipynb
resources/Large Lenguage Models/sesion_02/resources/: prompt_italian_buddy.txt
resources/Large Lenguage Models/sesion_02/translator_gemini/: Makefile  README.md  app.py  env.template  requirements.txt
resources/Large Lenguage Models/sesion_02/translator_gemini/core/: __init__.py  config.py  gemini_translator.py  state.py  ui.py
resources/Large Lenguage Models/sesion_02/translator_langchain/: Makefile  README.md  app.py  env.template  requirements.txt
resources/Large Lenguage Models/sesion_02/translator_langchain/core/: __init__.py  config.py  langchain_translator.py  models.py  ui.py
resources/Large Lenguage Models/sesion_02/translator_openai/: Makefile  README.md  app.py  env.template  requirements.txt
resources/Large Lenguage Models/sesion_02/translator_openai/core/: __init__.py  config.py  languages.py  openai_translator.py  ui.py
resources/Large Lenguage Models/sesion_03/: Makefile  README.md  pyproject.toml  requirements.txt  sesion_03.ipynb
resources/Large Lenguage Models/sesion_03/inputs/company_docs_src/: 01_manual_bienvenida_y_onboarding.md  02_politica_it_accesos_y_seguridad_digital.md  03_guia_rrhh_vacaciones_ausencias_y_desempeno.md  04_protocolo_seguridad_fisica_incidentes_y_emergencias.md  05_manual_finanzas_compras_gastos_y_proveedores.md  06_playbook_operaciones_cliente_y_continuidad.md
resources/Large Lenguage Models/sesion_03/rag_assistant/: Makefile  README.md  app.py  requirements.txt
resources/Large Lenguage Models/sesion_03/rag_assistant/core/: __init__.py  categories.py  config.py  models.py  rag_engine.py  (+3 more)
resources/Large Lenguage Models/sesion_04/: Makefile  README.md  data.csv  pyproject.toml  requirements.txt  sesion_04.ipynb
resources/Large Lenguage Models/sesion_04/ops_copilot/: Makefile  README.md  app.py  requirements.txt
resources/Large Lenguage Models/sesion_05/: Makefile  README.md  data.csv  pyproject.toml  requirements.txt  sesion_05.ipynb  sesion_05_extra_finetuning.ipynb
resources/Large Lenguage Models/sesion_05/data/: eval_cases.jsonl  finetune_style_train.jsonl  finetune_style_validation.jsonl
resources/Large Lenguage Models/sesion_06/: .env.template  Makefile  README.md  operations_support.py  pyproject.toml  requirements.txt  sesion_06.ipynb
resources/Large Lenguage Models/sesion_06/mcp_servers/: operations_mcp_server.py
(+77 files in other folders)
