[project]
name = "pontia-sesion-06"
version = "0.1.0"
description = "Entorno reproducible para el notebook de arquitecturas multiagénticas."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "graphviz",
    "ipykernel",
    "jupyterlab",
    "mcp",
    "nbformat",
    "openai",
    "openai-agents",
    "pandas",
    "pydantic",
    "python-dotenv",
    "tiktoken>=0.13.0",
]

[tool.uv]
package = false
python-preference = "managed"
